scroll and drag in general works with lag, buttons work too; issues: sidebar images move double on click, sidebar doesn't close on not sidebar pointerdown, grid-view images are not scrollable sideways, exp-view slides too much to the right

--- a/berzsak/src/app/components/project-page/project-page.component.css
+++ b/berzsak/src/app/components/project-page/project-page.component.css
@@ -5,6 +5,11 @@
   gap: 40px;
 }
 
+img {
+  -webkit-user-drag: none; /* Safari/Chrome */
+  pointer-events: auto;
+}
+
 .navigate-back-btn {
   position: fixed;
   top: 10px;
